--- a/Cheap insurance companies.html
+++ b/Cheap insurance companies.html
@@ -7187,15 +7187,8 @@
                     </div>
                     <div class="top-bar-nav section" id="top-bar-nav" name="Top Navigation">
                         <div class="widget LinkList" data-version="2" id="LinkList72">
-                            <div class="widget-content">
-                                <ul>
-                                    <li><a href="/">Home</a></li>
-                                    <li><a href="https://techno-omtemplates.blogspot.com/p/about.html">About</a></li>
-                                    <li><a
-                                            href="https://techno-omtemplates.blogspot.com/p/contact-us_15.html">Contact</a>
-                                    </li>
-                                </ul>
-                            </div>
+                          <p>
+                            @Copyright 2023 - All Right Reserved</p>
                         </div>
                     </div>
                 </div>
@@ -7253,6 +7246,9 @@
             <div></div>
         </div>
     </div>
+
+
+   
 </body>
 
 </html>
